Closed Bug 727666 Opened 12 years ago Closed 12 years ago

Worker hang at shutdown with XHR

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: khuey, Unassigned)

References

Details

(Keywords: hang, regression)

Attachments

(2 files, 2 obsolete files)

Attached patch Patch (obsolete) — Splinter Review
Third time is the charm?
Attachment #597620 - Flags: review?(bent.mozilla)
Severity: normal → critical
Attached patch Patch (obsolete) — Splinter Review
Attachment #597620 - Attachment is obsolete: true
Attachment #598061 - Flags: review?(bent.mozilla)
Attachment #597620 - Flags: review?(bent.mozilla)
Comment on attachment 598061 [details] [diff] [review]
Patch

Oops, older patch.
Attachment #598061 - Attachment is obsolete: true
Attachment #598061 - Flags: review?(bent.mozilla)
Attached patch PatchSplinter Review
Attachment #604253 - Flags: review?(bent.mozilla)
Comment on attachment 604253 [details] [diff] [review]
Patch

Review of attachment 604253 [details] [diff] [review]:
-----------------------------------------------------------------

Needs moar comment, r=me with that!

::: dom/workers/XMLHttpRequestPrivate.cpp
@@ +1443,5 @@
>    // may be gone.
>  
>    if (mProxy) {
> +    // This isn't necessary if the worker is going away or the XHR is going away.
> +    if (aType == Default) {

Let's move this inside the 'else' case below. That way it's not so confusing.

::: dom/workers/XMLHttpRequestPrivate.h
@@ +165,5 @@
>  
>    bool
>    SendInProgress() const
>    {
> +    return mJSObjectRooted != 0;

Remove != 0
Attachment #604253 - Flags: review?(bent.mozilla) → review+
Attached patch Part 2Splinter Review
Attachment #604472 - Flags: review?(bent.mozilla)
Comment on attachment 604472 [details] [diff] [review]
Part 2

Review of attachment 604472 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/workers/XMLHttpRequestPrivate.cpp
@@ +1092,5 @@
>      }
>  
>      mProxy->mPreviousStatusText.Truncate();
>  
> +    mProxy->mInOpen = true;

Please assert !mProxy->mInOpen

@@ +1097,2 @@
>      rv = mProxy->mXHR->Open(mMethod, mURL, true, mUser, mPassword, 1);
> +    mProxy->mInOpen = false;

Please assert mProxy->mInOpen
Attachment #604472 - Flags: review?(bent.mozilla) → review+
I assume the landing was a coalesce of the 2 patches, if not please reopen.

https://hg.mozilla.org/mozilla-central/rev/b02fb1d9d533
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
Blocks: 786987
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: