Bug 727666: Worker hang at shutdown with XHR. r=bent