dom/workers/XMLHttpRequestPrivate.h
@@ -61,8 +61,8 @@ class XMLHttpRequestPrivate : public events::EventTarget,
   JSObject* mUploadJSObject;
   WorkerPrivate* mWorkerPrivate;
   nsRefPtr<Proxy> mProxy;
-  PRUint32 mJSObjectRootCount;
 
+  bool mJSObjectRooted;
   bool mMultipart;
   bool mBackgroundRequest;
   bool mWithCredentials;
@@ -75,7 +75,7 @@ public:
   void
   FinalizeInstance(JSContext* aCx)
   {
-    ReleaseProxy();
+    ReleaseProxy(XHRIsGoingAway);
     events::EventTarget::FinalizeInstance(aCx);
   }
 
@@ -148,11 +148,13 @@ public:
   OverrideMimeType(JSContext* aCx, JSString* aMimeType);
 
 private:
+  enum ReleaseType { Default, XHRIsGoingAway, WorkerIsGoingAway };
+
   void
-  ReleaseProxy();
+  ReleaseProxy(ReleaseType aType = Default);
 
   bool
-  Pin(JSContext* aCx);
+  MaybePin(JSContext* aCx);
 
   bool
   MaybeDispatchPrematureAbortEvents(JSContext* aCx);
@@ -164,7 +166,7 @@ private:
   bool
   SendInProgress() const
   {
-    return mJSObjectRootCount != 0;
+    return mJSObjectRooted;
   }
 };
 
